    files.

    Added an example, "profilers", featuring simple wrappers for the SICStus
    Prolog 4 profiler and the YAP count profiler.

    Added an example, "delegates", illustrating an implementation of the
    delegation design pattern.

    Updated the "cc" example, correcting the declaration of the predicate
    shell/1 and adding an operating_system_type/1 predicate.

    Updated the "build_release.sh" script in order to calculate all the
    necessary checksums when building the MacOS X installer package.


2.41.1 - October 6, 2010

    Modified the compilation of objects that don't instantiate, specialize,
    or extend other objects in order to allow their use as roots of either
    class hierarchies or prototype hierarchies. This change simplifies the
    definition of class hierarchies when reflexive designs are not required.

    Added support for the blackboard built-in predicates (bb_put/2, bb_get/2,
    bb_delete/2, and bb_update/3) found on some Prolog compilers such as YAP
    and SICStus Prolog. Note that a Prolog compiler natively supporting these
    predicates is required. This support aims to facilitate porting of Prolog
    applications using the blackboard; these predicates should be avoided when
    writing portable Logtalk applications.

    Simplified the internal representation of entity prefixes and entity
    predicate functors. The new representation is also a bit more compact.

    Corrected a bug in the compilation of clauses for multifile predicates
    defined in the pseudo-object "user" where the execution context for the
    clause body goals would be undefined.

    Corrected an optimization bug in the compilation of grammar rules that
    resulted in failed compilations whenever the body of a grammar rule was
    equivalent to fail/0. Thanks to Ulrich Neumerkel for the bug report.

    Corrected an optimization bug in the compilation of grammar rules that