@@ -73,6 +73,9 @@ RELEASE NOTES
     Updated the "cc" example, correcting the declaration of the predicate
     shell/1 and adding an operating_system_type/1 predicate.
 
+    Updated the "examples/tester.sh" script in order to work when running
+    Logtalk without using the installer scripts.
+
     Updated the "build_release.sh" script in order to calculate all the
     necessary checksums when building the MacOS X installer package.
 
